<resources>
    <!-- non-translatable strings -->
    <string name="app_name" translatable="false">CitizenService</string>
    <string name="app_version" translatable="false">v1.0</string>
    <string name="team_name" translatable="false">Deep Blue Team 117</string>
    <string name="member_saumitra" translatable="false">Saumitra Bose</string>
    <string name="member_cyprien" translatable="false">Cyprien Dcunha</string>
    <string name="member_anmol" translatable="false">Anmol Bongirwar</string>
    <string name="member_rohaan" translatable="false">Rohaan Joshi</string>

    <string name="web_client_id" translatable="false">
        382495725967-imhqnsm4rfn0kr2fuq08ibcgdbn0to7t.apps.googleusercontent.com
    </string>

    <!-- non-translatable strings - Libraries -->
    <string name="google_support_libraries" translatable="false">Google Support Libraries</string>
    <string name="v7_cardview_library" translatable="false">v7 cardview library</string>
    <string name="design_support_library" translatable="false">design support library</string>
    <string name="v4_support_library" translatable="false">v4 support library</string>
    <string name="firebase_libraries" translatable="false">Firebase Libraries</string>
    <string name="firebase_core_library" translatable="false">firebase core library</string>
    <string name="firebase_storage_library" translatable="false">firebase storage library</string>
    <string name="firebase_auth_library" translatable="false">firebase auth library</string>
    <string name="firebase_database_library" translatable="false">firebase database library</string>
    <string name="firebaseui_libraries" translatable="false">FirebaseUI Libraries</string>
    <string name="firebaseui_storage_library" translatable="false">firebase-ui storage library</string>
    <string name="firebaseui_database_library" translatable="false">firebase-ui database library</string>
    <string name="google_services_libraries" translatable="false">Google Services Libraries</string>
    <string name="play_services" translatable="false">play services</string>
    <string name="aurelhubert_libraries" translatable="false">Aurelhubert\'s Libraries</string>
    <string name="ahbottomnavigation" translatable="false">ahbottomnavigation</string>

    <!-- Bottom NavigationBar Strings-->
    <string name="bottom_bar_home_tab">Home</string>
    <string name="bottom_bar_all_tab">All</string>
    <string name="bottom_bar_camera_tab">Camera</string>
    <string name="bottom_bar_settings_tab">Settings</string>

    <!-- RecyclerView - Problem Card View -->
    <string name="problem_solved">Solved</string>
    <string name="problem_unsolved">Unsolved</string>
    <string name="problem_time_period">Time Period</string>
    <string name="problem_solve_button">Solve Problem</string>
    <string name="problem_expand_button">More Information</string>

    <!-- GraphView Strings-->
    <string name="graph_default_title">Graph</string>
    <string name="graph_all_stats_title">Problem Statistics</string>

    <!-- PhotoFragment Strings -->
    <string name="image_label">Image</string>
    <string name="category_label">Category</string>
    <string name="location_label">Location</string>
    <string name="description_label">Description</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_location">Edit Location</string>
    <string name="select_image">Please Load Image</string>
    <string name="select_category">Please Select Category</string>
    <string name="select_location">Please Select Location</string>

    <string name="category_dialog_title">Select Category</string>

    <string name="identifying_image">Identifying Image</string>
    <string name="identification_failed">Identification Failed</string>

    <!-- Upload Notification-->
    <string name="notification_upload_image_title">Uploading image</string>
    <string name="notification_upload_image_details">Upload in Progress</string>
    <string name="notification_upload_image_complete">Upload complete</string>

    <!-- Image Categories -->
    <string name="category_garbage">Garbage</string>
    <string name="category_potholes">Potholes</string>
    <string name="category_traffic">Traffic</string>
    <string name="category_none">None</string>

    <!-- Basic Strings -->
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>

    <!-- Themes Strings -->
    <string name="theme_indigo_pink">Indigo-Pink</string>
    <string name="theme_midNightBlue_yellow">MidNightBlue-Yellow</string>
    <string name="theme_wetAsphalt_turquoise">WetAsphalt-Turquoise</string>
    <string name="theme_grey_emerald">Grey-Emerald</string>
    <string name="theme_teal_orange">Teal-Orange</string>
    <string name="theme_brown_blue">Brown-Blue</string>

    <!-- SettingsFragment Strings -->
    <string name="notification_dialog_title">Notifications</string>
    <string name="language_dialog_title">Select Language</string>
    <string name="themes_dialog_title">Select Theme</string>
    <string name="about_dialog_title">About</string>
    <string name="libraries_dialog_title">Libraries Used</string>
    <string name="licence_dialog_title">Licence</string>

    <string name="settings_title_profile_info">Profile Info</string>
    <string name="settings_title_accessibility">Accessibility</string>
    <string name="settings_title_about">About</string>
    <string name="settings_title_logout">Log Out</string>

    <string name="profile_photo">UserAvatar</string>
    <string name="profile_name">UserName</string>
    <string name="profile_email">UserEmail</string>

    <string name="settings_accessibility_notifications">Notifications</string>
    <string name="settings_accessibility_languages">Languages</string>
    <string name="settings_accessibility_themes">Themes</string>
    <string name="settings_about_libraries">Libraries</string>
    <string name="settings_about_licences">Licences</string>
    <string name="settings_about_about">About</string>
    <string name="settings_logout_logout">Log Out</string>

    <!-- All View Fragment -->
    <string name="show_solved_problems">Show solved problems</string>

    <!-- Permissions -->
    <string name="permission_group_contacts">Contacts</string>
    <string name="permission_group_location">Location</string>
    <string name="permission_group_storage">Storage</string>

    <!-- permission_snackbar_part1 + permission_group + permission_snackbar_part2 -->
    <string name="permission_snackbar_part1">Please Give </string>
    <string name="permission_snackbar_part2"> Permissions for Proper Functioning</string>

    <!-- Login Activity -->
    <string name="progress_dialog_authenticating">Authenticating</string>

    <!-- Main Activity -->
    <string name="progress_dialog_logging_in">Logging in</string>

    <!-- Map Activity -->
    <string name="add_solution_dialog_title">Add Solution</string>
    <string name="add_solution_dialog_details">Do you want to add solution?</string>

    <!-- SLA Notification -->
    <string name="sla_update_problem_title">Update problem"</string>
    <string name="sla_update_problem_details_start">Update problem: </string>

    <!--SolutionDialog Activity -->
    <string name="solution_dialog_title">Add Solution Proof</string>
    <string name="solution_dialog_problem_image">Problem Image</string>
    <string name="solution_dialog_solution_image">Solution Image</string>

    <!-- GPS Service -->
    <string name="gps_disabled_dialog_title">GPS is not enabled</string>
    <string name="gps_disabled_dialog_details">Do you want to go to settings menu to enable it?</string>
    <string name="gps_disabled_settings_button">Settings</string>

    <!--Expanded ImageView -->
    <string name="expanded_image_view_title">Images</string>

    <!-- Source Dialog -->
    <string name="source_dialog_title">Select Source</string>
    <string name="source_camera">Camera</string>
    <string name="source_gallery">Gallery</string>

    <!--Placeholder-->
    <string name="placeholder">Placeholder</string>

    <!--SnackBar And Toasts-->
    <string name="image_not_loaded">Image not loaded yet. Please click again after the Image loads.</string>
    <string name="swipe_network_error">Slow network or network error</string>
    <string name="error_logging_in">Error while logging in</string>

    <!-- No internet card -->
    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_connection_message">You must be connected to internet to use this app.
        Please connect and try again</string>
    <string name="no_internet_connection_button">Open settings</string>

    <!-- Add problem Card -->
    <string name="add_problem_card_title">No Problem Added</string>
    <string name="add_problem_card_message">Seems like you have not added any problem.
        Add your first problem by clicking the button below. </string>
    <string name="add_problem_card_button">Add problem</string>

</resources>
