<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/add_problem_card_title"
            android:textColor="@color/white"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:text="@string/add_problem_card_message"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/add_problem_card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/add_problem_card_button"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"/>

    </LinearLayout>

</android.support.v7.widget.CardView>