<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp">

            <ImageView
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:id="@+id/map_info_user_image"
                android:src="@drawable/ic_person"
                android:contentDescription="@string/profile_photo" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/profile_name"
                android:id="@+id/map_info_user_name_tv"/>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_date_range"
                android:scaleType="centerInside"
                android:id="@+id/map_info_date_iv"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/problem_time_period" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="56dp"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/problem_time_period"
                android:id="@+id/map_info_period_tv"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/map_info_date_iv"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        android:id="@+id/map_info_image_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            android:id="@+id/map_info_image_view"
            android:contentDescription="@string/image_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:padding="8dp"
            android:background="#66000000"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/category_label"
            android:id="@+id/map_info_category_tv"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:id="@+id/map_info_description_tv"/>

</LinearLayout>